Feat : 다시 풀기 성공 [23.11.23]

--- a/kakao/[pr]성격_유형_검사.ipynb
+++ b/kakao/[pr]성격_유형_검사.ipynb
@@ -75,7 +75,7 @@
         },
         "outputId": "552a07cb-51be-40ce-8e5c-e6b6c2ca3f4a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,6 +171,96 @@
       ],
       "metadata": {
         "id": "iEoJY7Z3qVWs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ivIF7MnRyAhi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "################\n",
+        "# 1123 다시 성공\n",
+        "################\n",
+        "\n",
+        "def solution(survey, choices):\n",
+        "    answer_dict = {'R':0, 'T':0,'C':0, 'F':0,'J':0, 'M':0,'A':0, 'N':0}\n",
+        "    answer_list = [i for i in answer_dict]\n",
+        "    # ['R', 'T', 'C', 'F', 'J', 'M', 'A', 'N']\n",
+        "    answer = ''\n",
+        "    score_list = [0, 3, 2, 1, 0, 1, 2, 3]\n",
+        "\n",
+        "    for test, num in zip(survey, choices):\n",
+        "        if num == 4:\n",
+        "            pass\n",
+        "        elif num > 4: # 5번째 부터는 뒤 문자 선택지\n",
+        "            answer_dict[test[1]] += score_list[num]\n",
+        "        else:\n",
+        "            answer_dict[test[0]] += score_list[num]\n",
+        "    # {'R': 0, 'T': 3, 'C': 1, 'F': 0, 'J': 0, 'M': 2, 'A': 1, 'N': 1}\n",
+        "\n",
+        "    for front, back in zip(answer_list[::2], answer_list[1::2]):\n",
+        "        # (['R', 'C', 'J', 'A'], ['T', 'F', 'M', 'N'])\n",
+        "        if answer_dict[front] >= answer_dict[back]:\n",
+        "            answer += front\n",
+        "        else:\n",
+        "            answer += back\n",
+        "    return answer"
+      ],
+      "metadata": {
+        "id": "M_Yekn2nyAkD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9eUjphRsycuS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "################\n",
+        "# 1123 또 성공\n",
+        "################\n",
+        "\n",
+        "def solution(survey, choices):\n",
+        "    answer_list = ['R', 'T', 'C', 'F', 'J', 'M', 'A', 'N']\n",
+        "    answer_dict = { i:0 for i in answer_list}\n",
+        "    answer = ''\n",
+        "\n",
+        "    score_list = [0, 3, 2, 1, 0, 1, 2, 3]\n",
+        "\n",
+        "    for test, num in zip(survey, choices):\n",
+        "        if num > 4: # 5번째 부터는 뒤 문자 선택지\n",
+        "            answer_dict[test[1]] += score_list[num]\n",
+        "        elif num < 4:\n",
+        "            answer_dict[test[0]] += score_list[num]\n",
+        "    # {'R': 0, 'T': 3, 'C': 1, 'F': 0, 'J': 0, 'M': 2, 'A': 1, 'N': 1}\n",
+        "\n",
+        "    for front, back in zip(answer_list[::2], answer_list[1::2]):\n",
+        "        # (['R', 'C', 'J', 'A'], ['T', 'F', 'M', 'N'])\n",
+        "        if answer_dict[front] >= answer_dict[back]:\n",
+        "            answer += front\n",
+        "        else:\n",
+        "            answer += back\n",
+        "    return answer"
+      ],
+      "metadata": {
+        "id": "uvWQN_doycwI"
       },
       "execution_count": null,
       "outputs": []
